# rollcron

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  SPEC.md  rollcron.yaml
.github/workflows/: ci.yml  release.yml
src/: config.rs  git.rs  main.rs  scheduler.rs  webhook.rs
src/actor/: mod.rs
src/actor/job/: executor.rs  mod.rs  tick.rs
src/actor/runner/: git_poll.rs  lifecycle.rs  mod.rs
src/scheduler/: backoff.rs  executor.rs  mod.rs
