[package]
name = "rollcron"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
cron = "0.15"
chrono = "0.4"
chrono-tz = "0.10"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
